welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:10: error: value || is not a member of Int
       if 	( e=10 || f==10 ) {
                       ^blueTicket:10: error: type mismatch;
 found   : Unit
 required: Boolean
       if 	( e=10 || f==10 ) {
                   ^